FPLA-1294: Code review fixes